# GiveMiToken

./: .gitattributes  CODE_OF_CONDUCT.md  cspell.config.yaml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  app.css  app.tsx  global.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: 2fa-window.json  default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/assets/: eval-cookie.mjs.txt
src/components/: tab-content.tsx  xiaomi-login-form.tsx
src/components/tabs/: fluent-tab.tsx  greeting-tab.tsx  react-tab.tsx  tauri-tab.tsx
src/constants/: country.ts  win-labels.ts
src/ipc/: commands.ts  create-2fa-window.ts  listen-events.ts
src/styles/: base.css  components.css  utilities.css
src/styles/theme/: index.ts
src/xiaomi/: xiaomi-auth.ts
src/xiaomi/schemas/: service-login-response.schema.ts
src/xiaomi/utils/: crypto-utils.ts  magic-utils.ts  magic-values.ts  random.ts  rc4.ts
src/xiaomi/utils/__tests__/: crypto-utils.unit.test.ts  magic-utils.unit.test.ts  random.unit.test.ts  rc4.unit.test.ts
